# mem0

./: Cargo.toml  README.md
.claude/skills/mem0/: SKILL.md
.superpowers/sdd/: task-1-report.md
docs/: embed-packaging.md
docs/superpowers/plans/: 2026-06-16-mem0-cli.md  2026-06-16-mem0-v1.1-spec-1.md  2026-06-19-mem0-skill.md  2026-07-18-embed-model.md  2026-07-18-vector-search.md
docs/superpowers/specs/: 2026-06-16-mem0-cli-design.md  2026-06-16-mem0-v1.1-spec-1-schema.md  2026-06-19-mem0-skill-design.md  2026-07-18-embed-model-design.md  2026-07-18-vector-search-design.md
examples/: reembed.rs
skills/mem0/: SKILL.md
src/: lib.rs  main.rs
src/cli/: add.rs  compact.rs  dedup.rs  delete.rs  embed.rs  list.rs  mod.rs  promote.rs  search.rs  session.rs  show.rs  stats.rs  vsearch.rs
src/core/: error.rs  ids.rs  memory.rs  mod.rs
src/embed/: mod.rs  model.rs  store.rs
src/output/: format.rs  mod.rs
src/store/: db.rs  memories.rs  migrations.rs  mod.rs  sessions.rs  vectors.rs
tests/: cli_add.rs  cli_delete.rs  cli_e2e.rs  cli_embed.rs  cli_embed_feature_off.rs  cli_list.rs  cli_promote.rs  cli_search.rs  cli_session.rs  cli_show.rs  cli_stats.rs  cli_vsearch.rs  embed_unit.rs  smoke.rs  store_db.rs  store_dedup.rs  store_memories.rs  store_migrations.rs  store_sessions.rs  store_vectors.rs
